# mcp-debugpy

./: .envrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEMO_REPO_SUMMARY.md  LICENSE  MANIFEST.in  PUBLISHING_GUIDE.md  README.md  agent_instructions.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.json.example  setup.bat  setup.sh
.github/workflows/: ci.yml
docs/: DEBUGGING_WEB_APPS.md  mcp_usage.md  testing.md
examples/: README.md
examples/async_worker/: README.md  __init__.py  worker.py
examples/async_worker/tests/: __init__.py  test_worker.py
examples/gui_counter/: README.md  __init__.py  app.py  counter.py  run_counter_debug.py
examples/gui_counter/tests/: __init__.py  test_counter.py
examples/math_bug/: README.md  __init__.py  calculator.py
examples/math_bug/tests/: __init__.py  test_calculator.py
examples/web_flask/: README.md  __init__.py  app.py  inventory.py  run_flask.py
examples/web_flask/tests/: __init__.py  test_app.py
scripts/: claude_mcp_server.json  configure_mcp_clients.py  install-hooks.sh
src/: cli.py  dap_stdio_client.py  dap_stdio_direct.py  debug_utils.py  mcp_server.py  mcp_server.py.backup
src/sample_app/: app.py  app_with_debugpy.py
src/sample_app/tests/: test_app.py
tests/: test_cli.py  test_improved_error_handling.py  test_mcp_end_to_end.py  test_mcp_server.py  test_web_app_debug.py
