[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-debugpy"
version = "0.1.0"
description = "MVP: agent-steerable debug loop using MCP, DAP and debugpy (demo & examples)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "markomanninen" } ]
dependencies = [
  "mcp==1.7.1",
  "debugpy>=1.8.0",
  "Flask>=2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-json-report>=1.5.0",
  "ruff>=0.16.0",
  "black>=24.1.0",
  "mypy>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/markomanninen/mcp-debugpy"
Repository = "https://github.com/markomanninen/mcp-debugpy"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mcp-debug-server = "cli:main"
