[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-debugpy"
version = "0.2.0"
description = "MVP: agent-steerable debug loop using MCP, DAP and debugpy (demo & examples)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "markomanninen" } ]
dependencies = [
  "mcp==1.7.1",
  "debugpy>=1.8.0",
  "Flask>=2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-json-report>=1.5.0",
  "ruff>=0.16.0",
  "black>=24.1.0",
  "mypy>=1.9.0",
  "types-aiofiles>=25.0.0",
]

[project.urls]
Homepage = "https://github.com/markomanninen/mcp-debugpy"
Repository = "https://github.com/markomanninen/mcp-debugpy"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mcp-debug-server = "cli:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C", "N", "B", "RUF"]
extend-ignore = ["E203", "E501", "N802", "N803", "C901"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
files = ["src"]
ignore_missing_imports = true
strict = false
explicit_package_bases = true
mypy_path = "src:examples"
exclude = ["src/sample_app"]
